Implemeted solution for getRoutes by stops and distance.  Added unit tests.